--- a/account-service.yml
+++ b/account-service.yml
@@ -1,1 +1,13 @@
 greeting: "안녕하세요"
+---
+spring:
+  profiles: stage
+greeting: "스테이징 서버 입니다."
+---
+spring:
+  profiles: dev
+greeting: "개발 서버 입니다."
+---
+spring:
+  profiles: local
+greeting: "로컬 서버 입니다."
