--- a/account-service.yml
+++ b/account-service.yml
@@ -3,12 +3,18 @@ devguide:
 ---
 spring:
   profiles: stage
-greeting: "스테이징 서버 입니다."
+
+devguide:
+  greeting: "스테이징 서버 입니다."
 ---
 spring:
   profiles: dev
-greeting: "개발 서버 입니다."
+
+devguide:
+  greeting: "개발 서버 입니다."
 ---
 spring:
   profiles: local
-greeting: "로컬 서버 입니다."
+
+devguide:
+  greeting: "로컬 서버 입니다."
